feat: Languages dropdown

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -1,4 +1,8 @@
 {
+  "languages": {
+    "en": "English",
+    "fr": "French"
+  },
   "global": {
     "atlas": "Atlas",
     "marketplace": "Marketplace",
