feat: Sign in retry button

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -16,6 +16,7 @@
     "cancel": "Cancel",
     "submit": "Submit",
     "confirm": "Confirm",
+    "retry": "Retry",
     "authorized": "Authorized",
     "unauthorized": "Unauthorized",
     "wallet_address": "Wallet address",
