--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -16,6 +16,7 @@
     "cancel": "Annuler",
     "submit": "Envoyer",
     "confirm": "Confirmer",
+    "retry": "Recommencez",
     "authorized": "Autorisé",
     "unauthorized": "Non autorisé",
     "wallet_address": "Adresse du porte-feuille",
