feat: MANA approve to allow

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -24,6 +24,9 @@
     "sign_in_notice": "You need to {sign_in_link} to access this page",
     "owned_by": "Owned by {address_link}"
   },
+  "address": {
+    "its_you": "It's you"
+  },
   "navbar": {
     "my_land": "My Land"
   },
@@ -100,8 +103,7 @@
     "approved_balance": "Your approved balance is {approved_balance}",
     "needs_at_least": "You need at least {value} in order to buy this LAND.",
     "didnt_approve": "You haven't approved MANA",
-    "should_approve": "You need to approve MANA to be used by the Marketplace before you can buy LAND.",
-    "please_approve": "Please go to {settings_link} and approve some more MANA."
+    "please_approve": "Please go to {settings_link} and allow the Marketplace contract to move MANA in your behalf"
   },
   "parcel_publish": {
     "list_land": "List LAND for sale",
@@ -129,8 +131,8 @@
     "history": "History"
   },
   "transaction": {
-    "approved": "You approved {mana} to be used by the {marketplace_contract_link}",
-    "disapproved": "You deauthorized the {marketplace_contract_link} to transfer funds on your behalf",
+    "approved": "You allowed the {marketplace_contract_link} to move all your MANA on your behalf",
+    "disapproved": "You disallowed the {marketplace_contract_link} to transfer funds on your behalf",
     "authorize": "You have {action} the {marketplace_contract_link} to operate LAND on your behalf",
     "edit": "You edited {parcel_link} with the name \"{name}\" and description \"{description}\"",
     "transfer": "You transfered {parcel_link} to {owner_link}",
@@ -138,12 +140,25 @@
     "buy": "You bought {parcel_link}",
     "cancel": "You cancelled the {publication_link} on {parcel_link}"
   },
+  "transaction_status": {
+    "see_activity": "To see your transaction history, visit your {activity_link}.",
+    "text": {
+      "pending": "The transaction is waiting to be confirmed.",
+      "failed": "Your transaction failed, you can try sending a new one."
+    },
+    "parcel": {
+      "still_pending": "{parcel_name} still has {transactions_count} pending transactions."
+    },
+    "idle":{
+      "please_confirm": "Please confirm the transaction"
+    }
+  },
   "settings": {
     "pending_tx": "You have a pending transaction",
-    "unapprove_mana_check": "Unchecking will approve 0 MANA",
-    "approve_mana_check": "Check to approve {mana_to_approve} MANA",
-    "mana_approved": "You have {mana_approved} MANA approved to be used by the contract.",
-    "approve_mana": "Approve {mana_to_approve} MANA usage for the {marketplace_contract_link}",
+    "unapprove_mana_check": "Check to disallow the Marketplace contract to move your MANA",
+    "approve_mana_check": "Check to allow the Marketplace contract to move all your MANA on your behalf",
+    "mana_approved": "You allowed the {marketplace_contract_link} to move all your MANA on your behalf",
+    "approve_mana": "Allow the {marketplace_contract_link} to move all your MANA on your behalf",
     "marketplace_contract": "Marketplace contract",
     "unauthorize_land_check": "Unchecking unauthorizes LAND usage for the Marketplace contract",
     "authorize_land_check": "Checking authorizes LAND usage to the Marketplace contract",
