--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -24,6 +24,9 @@
     "sign_in_notice": "Vous devez vous connecter sur {sign_in_link} pour acceder a cette page",
     "owned_by": "Controlé par {address_link}"
   },
+  "address": {
+    "its_you": "C'est toi"
+  },
   "navbar": {
     "my_land": "Mes LANDs"
   },
@@ -100,8 +103,7 @@
     "approved_balance": "Votre balance est de {approved_balance}",
     "needs_at_least": "Vous avez besoin d'au moins {value} pour acheter cette LAND.",
     "didnt_approve": "Vous n'avez pas de MANA validée",
-    "should_approve": "Vous devez valider de la MANA afin qu'elle soit utilisée sur la place de marché avant d'acheter un terrain.",
-    "please_approve": "Veuillez vous rendre à {settings_link} et valider de la MANA supplémentaire."
+    "please_approve": "Veuillez accéder à {settings_link} et autoriser le contrat Marketplace à déplacer MANA en votre nom."
   },
   "parcel_publish": {
     "list_land": "Lister les LANDs à vendre",
@@ -138,12 +140,25 @@
     "buy": "Vous avez acheté {parcel_link}",
     "cancel": "Vous avez annulé l'offre {publication_link} sur la LAND {parcel_link}"
   },
+  "transaction_status": {
+    "see_activity": "Pour consulter plus en détail l'historique de vos transactions, consultez votre {activity_link}.",
+    "text": {
+      "pending": "La transaction est en attente d'être confirmée.",
+      "failed": "Votre transaction a échoué, vous pouvez essayer d'en envoyer une nouvelle."
+    },
+    "parcel": {
+      "still_pending": "{parcel_name} a toujours {transactions_count} transactions en attente."
+    },
+    "idle":{
+      "please_confirm": "Veuillez confirmer la transaction"
+    }
+  },
   "settings": {
     "pending_tx": "Vous avez une transaction en attente",
-    "unapprove_mana_check": "Décocher cette case validera 0 MANA",
-    "approve_mana_check": "Cocher pour approuver {mana_to_approve} MANA",
-    "mana_approved": "Vous avez {mana_approved} MANA validée(s) pour être utilisé par la place de marché.",
-    "approve_mana": "Approuver l'utilisation de {mana_to_approve} MANA pour le {marketplace_contract_link}",
+    "disapprove_mana_check": "Cochez pour interdire le contrat de marché pour déplacer votre MANA",
+    "approve_mana_check": "Cochez cette case pour permettre au contrat de marché de déplacer tous vos comptes MANA en votre nom",
+    "mana_approved": "Vous avez autorisé le {marketplace_contract_link} à déplacer tous vos comptes MANA en votre nom",
+    "approve_mana": "Autoriser le {marketplace_contract_link} à déplacer tous vos comptes MANA en votre nom",
     "marketplace_contract": "Contrat de la place de marché",
     "unauthorize_land_check": "Décocher cette case enlève le droit à la place de marché de gérer vos LANDs.",
     "authorize_land_check": "Cocher pour autoriser la place de marché à gérer vos LANDs.",
