--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -98,7 +98,7 @@
   },
   "parcel_buy": {
     "buy_land": "Buy LAND",
-    "about_to_buy": "You are about to buy {parcel_name}",
+    "about_to_buy": "You are about to buy {parcel_name} {parcel_price}",
     "approved_balance": "Your approved balance is {approved_balance}",
     "needs_at_least": "You need at least {value} in order to buy this LAND.",
     "didnt_approve": "You haven't approved MANA",
