--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -100,7 +100,8 @@
   },
   "parcel_buy": {
     "buy_land": "Acheter une LAND",
-    "about_to_buy": "Vous êtes sur le point d'acheter {parcel_name}",
+    "about_to_buy":
+      "Vous êtes sur le point d'acheter {parcel_name} {parcel_price}",
     "approved_balance": "Votre balance est de {approved_balance}",
     "needs_at_least":
       "Vous avez besoin d'au moins {value} pour acheter cette LAND.",
