--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -103,8 +103,8 @@
     "about_to_buy": "You are about to buy {parcel_name}",
     "approved_balance": "Your approved balance is {approved_balance}",
     "needs_at_least": "You need at least {mana} in order to buy this LAND.",
-    "didnt_approve": "You haven't approved MANA",
-    "please_approve": "Please go to {settings_link} and allow the Marketplace contract to move MANA in your behalf",
+    "didnt_approve": "You haven't authorized MANA usage",
+    "please_approve": "Please go to {settings_link} and allow the Marketplace contract to operate MANA on your behalf",
     "total_balance": "Your balance is {balance}"
   },
   "parcel_publish": {
@@ -124,7 +124,8 @@
   "parcel_cancel": {
     "cancel_land": "Cancel LAND Sale",
     "currently_on_sale":"is currently on sale for {value}.",
-    "about_to_cancel": "You are about to cancel this sale."
+    "about_to_cancel": "You are about to cancel this sale.",
+    "not_for_sale": "is not for sale."
   },
   "activity": {
     "no_activity": "You have no activity yet.",
@@ -133,8 +134,8 @@
     "history": "History"
   },
   "transaction": {
-    "approved": "You allowed the {marketplace_contract_link} to move all your MANA on your behalf",
-    "disapproved": "You disallowed the {marketplace_contract_link} to transfer funds on your behalf",
+    "approved": "You authorized the {marketplace_contract_link} to operate MANA on your behalf",
+    "disapproved": "You unauthorized the {marketplace_contract_link} to operate MANA on your behalf",
     "authorize": "You have {action} the {marketplace_contract_link} to operate LAND on your behalf",
     "edit": "You edited {parcel_link} with the name \"{name}\" and description \"{description}\"",
     "transfer": "You transfered {parcel_link} to {owner_link}",
