--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -24,7 +24,8 @@
     "sign_in": "Se connecter",
     "sign_in_notice":
       "Vous devez vous connecter sur {sign_in_link} pour acceder a cette page",
-    "owned_by": "Controlé par"
+    "owned_by": "Controlé par",
+    "owned_by_link": "Controlé par {address_link}"
   },
   "address": {
     "its_you": "C'est toi"
