--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -1,7 +1,8 @@
 {
   "languages": {
-    "en": "Anglais",
-    "fr": "Français"
+    "en": "English",
+    "es": "Spanish",
+    "fr": "French"
   },
   "global": {
     "atlas": "Atlas",
