--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -192,6 +192,7 @@
   "footer": {
     "color_key": "Mapa de Colores",
     "privacy_policy": "Política de Privacidad",
+    "terms": "Términos y Condiciones",
     "copyright": "Copyright 2017 Decentraland. Todos los derechos reservados."
   }
 }
